--- a/Farmacia-main/Farmacio/Farmacio/farmacia.csproj
+++ b/Farmacia-main/Farmacio/Farmacio/farmacia.csproj
@@ -82,6 +82,12 @@
     <Compile Include="F_menuVendendor.Designer.cs">
       <DependentUpon>F_menuVendendor.cs</DependentUpon>
     </Compile>
+    <Compile Include="F_metas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="F_metas.Designer.cs">
+      <DependentUpon>F_metas.cs</DependentUpon>
+    </Compile>
     <Compile Include="F_vendas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="F_menuVendendor.resx">
       <DependentUpon>F_menuVendendor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="F_metas.resx">
+      <DependentUpon>F_metas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="F_vendas.resx">
       <DependentUpon>F_vendas.cs</DependentUpon>
